[package]
name = "ironsmith-parser"
description = "Transforms Smithy 2.0 IDL files into an abstract syntax tree"
version = "0.1.0"
edition = "2021"
authors = ["Jordan Doyle <jordan@doyle.la>"]
license = "WTFPL"
repository = "https://github.com/w4/ironsmith"
exclude = ["/fixtures", "*.snap"]

[dependencies]
nom = "7.1"

[dev-dependencies]
insta = { version = "1.42", features = ["glob"] }
